2014-05-04  Leo Liu  <sdl.web@gmail.com>

	* calendar/diary-lib.el (calendar-chinese-month-name-array):
	Defvar to pacify compiler.

2014-05-04  Eli Zaretskii  <eliz@gnu.org>

	* mail/rmailsum.el (rmail-new-summary-1): Fix a typo in a comment.

2014-05-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc/ediff-diff.el (ediff-set-fine-diff-properties-in-one-buffer):
	Use nil rather than `default' for the "default" appearance (bug#17388).
	* vc/ediff-util.el (ediff-inferior-compare-regions)
	(ediff-toggle-autorefine, ediff-unselect-difference): Don't use
	a misleading `default' value when it's really a boolean.
	* vc/ediff-init.el (ediff-set-overlay-face): Don't set help-echo if the
	overlay is not visible.

2014-05-04  Stephen Berman  <stephen.berman@gmx.net>

	* calendar/todo-mode.el (todo-edit-file): Use display-warning.
	(todo-menu): Uncomment and update.

2014-05-04  Stephen Berman  <stephen.berman@gmx.net>

	* calendar/todo-mode.el: Reimplement item editing to have the same
	basic user interface as item insertion, and make small UI and
	larger internal improvements to the latter.
	(todo-insert-item): Add reference to the Todo mode user manual to
	the documentation string.
	(todo-insert-item--basic): Rename from todo-basic-insert-item and
	adjust all callers.  Change signature to combine diary and
	nonmarking arguments.  Incorporate functionality of deleted item
	copying command and add error checking.  Remove detailed
	descriptions of the arguments from the documentation string, since
	this is treated in the Todo mode user manual.
	(todo-copy-item, todo-edit-multiline-item)
	(todo-edit-done-item-comment, todo-edit-item-header)
	(todo-edit-item-time, todo-edit-item-date-from-calendar)
	(todo-edit-item-date-to-today, todo-edit-item-date-day-name)
	(todo-edit-item-date-year, todo-edit-item-date-month)
	(todo-edit-item-date-day, todo-edit-item-diary-nonmarking):
	Remove.
	(todo-edit-item): Reimplement as wrapper command for